--- a/client/public/demo.html
+++ b/client/public/demo.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,37 +7,39 @@
   <title>Demo-5</title>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
-
 <body>
   <script type="text/javascript">
   var url1 = "https://www.easy-mock.com/mock/5a9b57fdcdae83069986dfd5/example/user_info";
   var url2 = "https://www.easy-mock.com/mock/5a9b57fdcdae83069986dfd5/example/company_info";
 
-  $(document).ready(function(){
-    function takeLongTime(url) {
-      var _url_ = url;
-      return new Promise(
-        resolve => {
-          $.ajax({
-            url: _url_,
-            method: 'get',
-            success: function(res){
-              return {"success":true,"res": res}
-            },
-            error: function(res){
-              return {"success":false,"res": res}
-            }
-          })
+  // 封装同步请求接口
+  function requestP(url){
+    return new Promise(function(resolve, reject){
+      $.ajax({
+        url: url,
+        method: 'get',
+        success: function(res){
+          // console.log('RequestP:', res);
+          resolve(res);
+        },
+        error: function(res){
+          // console.log('ERROR:', res);
+          reject(res);
         }
-      );
-    }
+      })
+    })
+  }
 
-    async function test() {
-      const v = await takeLongTime(url1);
-      console.log(v);
-    }
-
-    test();
+  $(document).ready(function(){
+    (async () => {
+      let userInfo = await requestP(url1);
+      let companyInfo = await requestP(url2);
+      let userObject = {
+        'user': userInfo.data,
+        'company': companyInfo.data
+      }
+      console.dir(userObject);
+    })();
   });
   </script>
 </body>
